README.md 수정 및 테스트코드 수정

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,12 @@
 	<groupId>com.dkt</groupId>
 	<artifactId>spock</artifactId>
 	<version>1.0</version>
-	<name>spock-maven</name>
+	<name>spock-study</name>
 	<description>spock과 maven 을 활용한 테스트 환경 설정</description>
 
 	<properties>
 		<java.version>8</java.version>
+		<jvm.options>-Dproject.name=${project.name}</jvm.options>
 	</properties>
 
 	<dependencies>
@@ -76,28 +77,45 @@
 		</dependency>
 
 		<!-- Optional dependencies for using Spock -->
-		<dependency> <!-- use a specific Groovy version rather than the one specified by spock-core -->
+		<!--<dependency> &lt;!&ndash; use a specific Groovy version rather than the one specified by spock-core &ndash;&gt;
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>2.5.7</version>
 			<type>pom</type>
 		</dependency>
-		<dependency> <!-- enables mocking of classes (in addition to interfaces) -->
+		<dependency> &lt;!&ndash; enables mocking of classes (in addition to interfaces) &ndash;&gt;
 			<groupId>net.bytebuddy</groupId>
 			<artifactId>byte-buddy</artifactId>
 			<version>1.9.7</version>
 		</dependency>
-		<dependency> <!-- enables mocking of classes without default constructor (together with CGLIB) -->
+		<dependency> &lt;!&ndash; enables mocking of classes without default constructor (together with CGLIB) &ndash;&gt;
 			<groupId>org.objenesis</groupId>
 			<artifactId>objenesis</artifactId>
 			<version>2.6</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${jvm.options}</argLine>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.0</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
 
 			<!-- Mandatory plugins for using Spock -->
 			<plugin>
@@ -105,7 +123,7 @@
                 visit https://github.com/groovy/GMavenPlus/wiki -->
 				<groupId>org.codehaus.gmavenplus</groupId>
 				<artifactId>gmavenplus-plugin</artifactId>
-				<version>1.6</version>
+				<version>1.6.2</version>
 				<executions>
 					<execution>
 						<goals>
@@ -114,6 +132,16 @@
 						</goals>
 					</execution>
 				</executions>
+				<configuration>
+					<testSources>
+						<testSource>
+							<directory>${project.basedir}/src/test/groovy</directory>
+							<includes>
+								<include>**/*.groovy</include>
+							</includes>
+						</testSource>
+					</testSources>
+				</configuration>
 			</plugin>
 			<!-- Optional plugins for using Spock -->
 
