--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.jpa.properties.hibernate.format_sql=true
 
 ## h2
 spring.h2.console.enabled=true
+
+## http
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
